2001-04-04  Dave Peticolas  <dave@krondo.com>

	* src/register/gnome/gnucash-sheet.c
	(gnucash_register_goto_next_trans_row): new func.

	* src/gnome/window-register.c: make 'enter' toolbar button
	move to next transaction

	* src/gnome/dialog-tax-info.c: more work

	* src/gnome/dialog-account.c: allow opening balances to come
	from other accounts

	* src/gnome/dialog-totd.c (totd_close_cb): don't bother with the
	help dialog after disabling tips

2001-04-04  Christian Stimming  <stimming@tuhh.de>

	* src/gnome/gnc-html-guppi.c, src/scm/html-barchart.scm: Added new
	option for barchart: legend-reversed.

2001-04-04  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/balance-sheet.scm: calculate retained profits
	explicitly, display (liabilities + equity) to allow people
	to check balances.

2001-04-03  Dave Peticolas  <dave@krondo.com>

	* src/register/gnome/gnucash-sheet.c: move cursor before showing
	popup menu

	* src/gnome/window-register.c: add a Transaction->Invoice item

	* src/engine/Query.c: add GUID predicate

	* src/gnome/dialog-commodity.c: add namespace picker getter.
	Show "CURRENCY" instead of "ISO4217" when displaying.

	* src/gnome/druid-commodity.c: use namespace picker getter

	* src/gnome/druid-qif-import.c: use namespace picker getter

	* src/scm/report/register.scm: more work

	* src/engine/gnc-commodity.c (reset_printname): take the namespace
	out of the printname

	* src/gnome/dialog-account.c: add opening balance support

	* src/gnc-ui-util.c (gnc_find_or_create_equity_account): new func.
	(gnc_account_create_opening_balance): new func.

	* src/gnome/gnc-dateedit.c: add some error checking

	* src/gnome/gnc-commodity-edit.c: add "changed" signal

	* src/scm/report/register.scm: fix bug

2001-04-03  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/html-table.scm (gnc:html-table-prepend-row!): Fix
	bug.

	* src/scm/report/html-utilities.scm (gnc:build-html-acct-table): Add
	show-col-headers option.
